# Lyuyuan_AI

./: .env.example  .gitignore  API_TROUBLESHOOTING.md  CHANGELOG.md  Character_Factory.py  DEVELOPER_GUIDE.md  GAME_GUIDE.md  Game_Storage.py  QUICKSTART.md  README.md  REFACTORING.md  Su_Tang.py  Su_Tang_API.txt  TESTING_SUMMARY.md  WEB_README.md  achievement_system.py  api_test.py  app.py  base_character.py  create_placeholder_images.py  deepseek.txt  install.py  install_and_run.py  install_windows.bat  main.py  main_new.py  modernized_game.py  pyproject.toml  requirements.txt  start_web.bat  su_tang_character.py  sutang_prompt.txt  web_start.py
backend/: config.py  game_storage.py  settings.py
backend/domain/: game_core.py  memory_system.py  proactive_system.py
backend/infrastructure/: event_listeners.py  events.py
backend/services/: game_service.py
characters/: README.md  gu_pan.yaml  lin_yuhan.yaml  luo_yimo.yaml  su_tang.yaml  xia_xingwan.yaml
core/: __init__.py  affection_system.py  nlp_engine.py  scene_manager.py
core/affection/: __init__.py  (+4 more)
docs/: DIRECTORY_STRUCTURE.md  OPTIMIZATION.md  testing-checklist.md  testing-guide.md
game/: __init__.py  affection_manager.py  dialogue_system.py  game_manager.py  main.py  main_modernized.py
prompts/: lin_yuhan_prompt.txt
tests/: api_test.py  api_test.sh  test_all_characters.py  test_character_events.py  test_character_loader.py  test_character_loader_simple.py  test_events.py  test_llm_providers.py  test_llm_simple.py
utils/: __init__.py  common.py
web_app/: app.py  game_core.py  requirements.txt
(+48 files in other folders)
